<resources>
    <string name="app_name">G-Crime</string>
    <string name="cS1">Prescribed premises which does not comply with Term of License Sect.16(1)</string>
    <string name="cS2">Prescribed premises operating without License Sect.18 (1)</string>
    <string name="cS3">Prescribed Conveyance Operating Without License Sect.18 (1) (a)</string>
    <string name="cS4">Open Burning Sect.29(A)</string>
    <string name="cS5">Black Smoke Emission Greater Than Specified Standard Sect.22(1) - Black Smoke Emission From Diesel Engines</string>
    <string name="cS6">Black Smoke Emission Greater Than Specified Standard Sect.22(1) - Black Smoke Emission From Premises</string>
    <string name="cS7">Discharge Effluent Greater Than Specified Conditions Sect.25(1)</string>
    <string name="cS8">Emission of Noise Greater Than Specific Standard Sect.23(1)</string>
    <string name="cS9">Prohibition against placing/ deposit of scheduled waste without prior approval from the Director General Sect.34 (B)</string>
    <string name="cS10">Failure to submit report on the impact on the environment to the Director of Environmental Quality for examination - EIA Sect.34(A)</string>
    <string name="cS11">Pollution of the Soil Sect.24(1)</string>
    <string name="cS12">Failure of owner or occupier to install, operate, Repair etc. Sect.31(1)</string>
    <string name="cS13">Penalty for offences not otherwise provided for Sect.41</string>
    <string name="cS14">Discharge of Oil Into Malaysian Water Sect.27(1)</string>
    <string name="cS15">Burning in connection with any industrial or trade purposes including burning of waste - Environmental Quality (Clean Air Regulation) 1978</string>
    <string name="cS16">Non-compliance with Environmental Quality (Prescribed Premises)(Scheduled Waste Treatment &amp; Disposal Facilities) Regulation 1989</string>
    <string name="cS17">Discharge or release of industrial effluent or mixed effluent, onto or into any soil, or into inland waters or Malaysian waters - Environmental Quality (Industrial Effluent) Regulation 2009</string>
    <string name="cS18">Discharge sewage onto or into any soil, or into any inland waters or Malaysian waters - Environmental Quality (Sewage) Regulation 2009</string>
    <string name="cS19">Failure of Owner or Occupier to furnish Information Sect.37</string>
    <string name="cS20">Indirect emission from business operation.</string>
    <string name="cS21">Indirect emission from purchased or acquired heating, steam, electricity and cooling system within the organisation.</string>
    <string name="cS22">Other indirect emission from outside organisation</string>
    <string name="cS23">Poor hazardous waste and disposal management system</string>
    <string name="cS24">Weak non-hazardous waste and disposal management system</string>
    <string name="cS25">Incidents of significant spills</string>
    <string name="cS26">Improper usage of water withdrawn either from surface water, ground water, rainwater, waste water, or water utilities.</string>
    <string name="cS27">No water recycled and reused system</string>
    <string name="cS28">No fuel consumption system from renewable source</string>
    <string name="cS29">No fuel consumption system form non-renewable source</string>
    <string name="cS30">No alternative energy used</string>
    <string name="cS31">Failure in identifying actual or potential negative environmental impact in supply chain</string>
    <string name="cS32">Failure in assessing supplier background that actually or potentially have environmental impacts </string>
    <string name="cS33">Poor product and services mitigation approach towards environmental impact.</string>
    <string name="cS34">No disclosure of information on non-renewable material used to produce and package the product</string>
    <string name="cS35">No disclosure of information on recycled input material to manufacture the product</string>
    <string name="cS36">Failure to resolve grievances about the impact on land contamination</string>
    <string name="cS37">Failure to resolve grievances about the impact on land degradation</string>
    <string name="cS38">Environmental violations involving the rights of indigenous peoples</string>
    <string name="cS39">Environmental violations involving the rights of local community</string>
    <string name="cS40">Incidents of discrimination towards the community in context of environmental issues</string>
    <string name="cS41">Incidents of significant spills</string>
    <string name="cS42">Introduction of invasive species, pests, and pathogens</string>
    <string name="cS43">Reduction of species </string>
    <string name="cS44">Habitat conversion </string>
    <string name="cS45">Changes in ecological processes outside the natural range of variation (such as salinity or changes in groundwater level)</string>

    <!-- actions -->
    <string name="btn_calculate">Calculate</string>
    <string name="btn_back">Back</string>

    <!-- topics -->
    <string name="cTopic_1">Non-Compliance to Environmental Regulation\n(Law &amp; Policy)</string>
    <string name="cTopic_2">Poor Environmental Management &amp; Practices</string>
    <string name="cTopic_3">Involvement against Environment Justice</string>

    <!-- sub-topics -->
    <string name="c1_1">Licensing</string>
    <string name="c1_2">Air Pollution</string>
    <string name="c1_3">Water Pollution</string>
    <string name="c1_4">Noise Pollution</string>
    <string name="c1_5">Scheduled Waste</string>
    <string name="c1_6">Environment Impact Assessment</string>
    <string name="c1_7">Other Offences</string>
    <string name="c2_1">Greenhouse gas (GHG) emission</string>
    <string name="c2_2">Drilling waste and disposal</string>
    <string name="c2_3">Spills</string>
    <string name="c2_4">Water management</string>
    <string name="c2_5">Consumption</string>
    <string name="c2_6">Assessment</string>
    <string name="c2_7">Stewardship</string>
    <string name="c2_8">Material sourcing and management</string>
    <string name="c2_9">Land </string>
    <string name="c3_1">Human Rights</string>
    <string name="c3_2">Discrimination</string>
    <string name="c3_3">Spills</string>
    <string name="c3_4">Direct and indirect impacts on biodiversity</string>

    <!-- result page -->
    <string name="topic_result">Result</string>
    <string name="title_law">Non-Compliance to Environmental Regulation\n(Law &amp; Policy)</string>
    <string name="title_management">Poor Environmental Management &amp; Practices</string>
    <string name="title_environment">Involvement against Environment Justice</string>
    <string name="score_precentage">%</string>
    <string name="title_score">G-CRIME SCORE</string>
    <string name="title_total_score">TOTAL G-CRIME SCORE</string>
    <string name="title_level">G-CRIME LEVEL</string>
    <string name="link_frontpage">MAIN PAGE</string>
    <string name="g_crime">G-CRIME</string>
    <string name="green_crime_detector">GREEN CRIME DETECTOR</string>
    <string name="start">Start</string>
    <string name="analysis">Analysis</string>

    <string name="gDescription1">Green crime detector is a self-check tool developed to assess green criminology of organisations. This tool aims to offer an indicator of situations involving environmental crime. </string>
    <string name="gDescription2">This application is to provide a comprehensive self-assessment system on green crime. It also offer a recommendation report that will re-align future environmental practices in accordance with best practices.</string>
    <string name="gDescription3"><b>The result of the green crime assessment will enable organisations:</b></string>
    <string name="gDescription4">1. To determine the level of practices of organisations on environmental related issues.</string>
    <string name="gDescription5">2. To enhance, align and improve their environmental management and practices</string>

    <!-- analysis fragment -->
    <string-array name="lbl_cat1">
        <item>Licensing</item>
        <item>Air Pollution</item>
        <item>Water\nPollution</item>
        <item>Noise Pollution</item>
        <item>Scheduled Waste</item>
        <item>Environment Impact Assessment</item>
        <item>Other Offences</item>
    </string-array>
    <string-array name="lbl_cat2">
        <item>Greenhouse Gas (GHG) Emission</item>
        <item>Drilling Waste and Disposal</item>
        <item>Spills</item>
        <item>Water Management</item>
        <item>Consumption</item>
        <item>Assessment</item>
        <item>Stewardship</item>
        <item>Material Sourcing and Management</item>
        <item>Land</item>
    </string-array>
    <string-array name="lbl_cat3">
        <item>Human Rights</item>
        <item>Discrimination</item>
        <item>Spills</item>
        <item>Direct and Indirect impact on Biodiversity</item>
    </string-array>
</resources>
