<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green_2"
    android:scrollbars="none">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:padding="10dp"
            android:layout_gravity="center"
            android:background="@color/white"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:background="@drawable/gcrime"
                android:layout_width="60dp"
                android:layout_height="60dp" />

            <LinearLayout
                android:paddingLeft="2dp"
                android:paddingStart="2dp"
                android:gravity="bottom"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

                <TextView
                    android:layout_gravity="center"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:text="@string/g_crime"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_gravity="center"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:text="@string/green_crime_detector"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:background="@color/green_2"
            android:padding="5dp"
            android:layout_marginTop="25dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:textAlignment="center"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:text="@string/gDescription1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_marginTop="20dp"
                android:textAlignment="center"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:text="@string/gDescription2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_marginTop="20dp"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:gravity="start"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:text="@string/gDescription3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:gravity="start"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:text="@string/gDescription4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:gravity="start"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:text="@string/gDescription5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:layout_marginTop="10dp"
                android:layout_gravity="center"
                android:id="@+id/btnStart"
                android:text="@string/start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>