<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/c3_1"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:padding="2dp"
            android:background="@color/subtopic_bg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rcSoalan3_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/c3_2"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:padding="2dp"
            android:background="@color/subtopic_bg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rcSoalan3_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="@string/c3_3"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:padding="2dp"
            android:background="@color/subtopic_bg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rcSoalan3_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="@string/c3_4"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:padding="2dp"
            android:background="@color/subtopic_bg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rcSoalan3_4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>