<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.g_crime.Activity.Analysis">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/title_law"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="10dp"
            android:padding="10dp"
            android:textColor="@color/black"
            android:background="@color/yellow"
            android:textStyle="bold"
            android:gravity="center" />
        <com.github.mikephil.charting.charts.BarChart
            android:id="@+id/bcCat1"
            android:layout_width="match_parent"
            android:layout_height="300dp" />

        <TextView
            android:text="@string/title_management"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="10dp"
            android:padding="10dp"
            android:textColor="@color/black"
            android:background="@color/yellow"
            android:textStyle="bold"
            android:gravity="center" />
        <com.github.mikephil.charting.charts.BarChart
            android:id="@+id/bcCat2"
            android:layout_width="match_parent"
            android:layout_height="300dp" />

        <TextView
            android:text="@string/title_environment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="10dp"
            android:padding="10dp"
            android:textColor="@color/black"
            android:background="@color/yellow"
            android:textStyle="bold"
            android:gravity="center" />
        <com.github.mikephil.charting.charts.BarChart
            android:id="@+id/bcCat3"
            android:layout_width="match_parent"
            android:layout_height="300dp" />

        <Button
            android:id="@+id/btnBack"
            android:text="@string/btn_back"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp" />
    </LinearLayout>
</ScrollView>
