<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- individual score -->
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <!-- law -->
            <LinearLayout
                android:orientation="horizontal"
                android:padding="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageButton
                    android:id="@+id/ibLaw"
                    android:background="@drawable/law"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <LinearLayout
                    android:orientation="vertical"
                    android:padding="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical">

                    <TextView
                        android:id="@+id/tvTitleLaw"
                        android:text="@string/title_law"
                        android:layout_marginBottom="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black" />

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_marginTop="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal">

                        <TextView
                            android:text="@string/title_score"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/black"
                            android:textStyle="bold"
                            android:textSize="20sp" />
                        <TextView
                            android:id="@+id/tvScoreLaw"
                            android:text="50"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:textColor="@color/orange"
                            android:textStyle="bold"
                            android:textSize="20sp" />
                        <TextView
                            android:text="@string/score_precentage"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:textColor="@color/orange"
                            android:textSize="20sp" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <!-- management -->
            <LinearLayout
                android:orientation="horizontal"
                android:padding="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageButton
                    android:id="@+id/ibManagement"
                    android:background="@drawable/management"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <LinearLayout
                    android:orientation="vertical"
                    android:padding="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical">

                    <TextView
                        android:id="@+id/tvTitleManagement"
                        android:text="@string/title_management"
                        android:layout_marginBottom="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black" />

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_marginTop="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal">

                        <TextView
                            android:text="@string/title_score"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/black"
                            android:textStyle="bold"
                            android:textSize="20sp" />
                        <TextView
                            android:id="@+id/tvScoreManagement"
                            android:text="50"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:textColor="@color/orange"
                            android:textStyle="bold"
                            android:textSize="20sp" />
                        <TextView
                            android:text="@string/score_precentage"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:textColor="@color/orange"
                            android:textSize="20sp" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <!-- environment -->
            <LinearLayout
                android:orientation="horizontal"
                android:padding="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageButton
                    android:id="@+id/ibEnvironment"
                    android:background="@drawable/environment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <LinearLayout
                    android:orientation="vertical"
                    android:padding="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical">

                    <TextView
                        android:id="@+id/tvTitleEnvironment"
                        android:text="@string/title_environment"
                        android:layout_marginBottom="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black" />

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_marginTop="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal">

                        <TextView
                            android:text="@string/title_score"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/black"
                            android:textStyle="bold"
                            android:textSize="20sp" />
                        <TextView
                            android:id="@+id/tvScoreEnvironment"
                            android:text="50"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:textColor="@color/orange"
                            android:textStyle="bold"
                            android:textSize="20sp" />
                        <TextView
                            android:text="@string/score_precentage"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:textColor="@color/orange"
                            android:textSize="20sp" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <!-- total score -->
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp">

            <TextView
                android:text="@string/title_total_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:gravity="center" />

            <TextView
                android:id="@+id/tvTotalScore"
                android:text="310"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:gravity="center" />
        </LinearLayout>

        <!-- level -->
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:margin="10dp">

            <TextView
                android:text="@string/title_level"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:gravity="center" />

            <ImageView
                android:background="@color/green"
                android:layout_width="100dp"
                android:layout_height="30dp"
                android:layout_gravity="center" />
        </LinearLayout>

        <!-- frontpage button -->
        <Button
            android:id="@+id/btnFrontPage"
            android:text="@string/link_frontpage"
            android:padding="10dp"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
</ScrollView>
